Fixing misaligned pages bug when returning to a feed.

--- a/media/ios/storyDetailView.css
+++ b/media/ios/storyDetailView.css
@@ -201,7 +201,7 @@ body.NB-iphone {
     left: -2px;
     bottom: -2px;
     right: -2px;
-    background-color: #040;
+    background-color: #000;
     opacity: .25;
     border-radius: 4px;
     display: none;
